[package]
name = "gcmd"
version = "0.1.5"
edition = "2021"
default-run = "gcmd-dev"

[lib]
name = "terminal"
path = "terminal/lib.rs"

[[bin]]
name = "gcmd"
path = "src/main.rs"

[[bin]]
name = "gcmd-dev"
path = "gcmd-dev/main.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
num_cpus = "1.16.0"
tokio = {Version="1.36.0", features=["full"] }
