[package]
name = "gcmd"
version = "0.1.5"
edition = "2021"
default-run = "gcmd"
build = "build.rs"

[lib]
name = "terminal"
path = "terminal/lib.rs"

[[bin]]
name = "gcmd"
path = "src/main.rs"

[[bin]]
name = "gcmd-dev"
path = "gcmd-dev/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
configparser = "3.0.4"
crossterm = "0.27.0"
mlua = { version = "0.9.5", features = ["lua54", "vendored"] }
num_cpus = "1.16.0"
sha256 = "1.5.0"
tokio = { version = "1.0", features = ["macros", "rt"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
